--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
     </tr>
     <% } %>
   </table>
+  <input type='submit' value='Add' onclick="javascript: location.href='add'">
 </body>
 
 </html>
